My calculator project using JavaScript

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <div class="calculator">
         <div class="content">
           <div class="display">
-          <div class="input"><span class="operator"></span></div>
-          <div class="output"></div>
+          <div class="input"><span class="operator"></span></div> // This displays whichever value we pass in
+          <div class="output"></div> // This displays the result after evaluation
         </div>
         </div>
         
-        <div class="keys">
+        <div class="keys"> // We'll be working with these keys below
            <div data-key="clear" class="key action"><span>AC</span> </div>
            <div data-key="brackets" class="key action"><span>( )</span></div>
            <div data-key="%" class="key action"> <span>%</span></div>
@@ -41,6 +41,6 @@
         </div>
         </div>
       </div>
-      <script src="script.js"></script>
+      <script src="script.js"></script> // I linked my JavaScript file to my HTML
 </body>
 </html>
