I corrected an error

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div class="calculator">
         <div class="content">
           <div class="display">
-          <div class="input"><span class="operator"></span></div> // This displays whichever value we pass in
-          <div class="output"></div> // This displays the result after evaluation
+          <div class="input"><span class="operator"></span></div> <!-- This displays whichever value we pass in -->
+          <div class="output"></div>  <!--This displays the result after evaluation -->
         </div>
         </div>
         
@@ -41,6 +41,6 @@
         </div>
         </div>
       </div>
-      <script src="script.js"></script> // I linked my JavaScript file to my HTML
+      <script src="script.js"></script> <!--I linked my JavaScript file to my HTML -->
 </body>
 </html>
